--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,41 @@
       <button (click)="popupService.showAsComponent(input.value)">Show as component</button>
       <button (click)="popupService.showAsElement(input.value)">Show as element</button>
     </div>
+    <h2 id="appUnless">UnlessDirective</h2>
+    <p>
+      The condition is currently
+      <span [ngClass]="{ 'a': !condition, 'b': condition, 'unless': true }">{{condition}}</span>.
+      <button
+        (click)="condition = !condition"
+        [ngClass] = "{ 'a': condition, 'b': !condition }" >
+        Toggle condition to {{condition ? 'false' : 'true'}}
+      </button>
+    </p>
+    <p *appUnless="condition" class="unless a">
+      (A) This paragraph is displayed because the condition is false.
+    </p>
+
+    <p *appUnless="!condition" class="unless b">
+      (B) Although the condition is true,
+      this paragraph is displayed because appUnless is set to false.
+    </p>
+
+
+    <h4>UnlessDirective with template</h4>
+
+    <p *appUnless="condition">Show this sentence unless the condition is true.</p>
+
+    <p *appUnless="condition" class="code unless">
+      (A) &lt;p *appUnless="condition" class="code unless"&gt;
+    </p>
+
+    <ng-template [appUnless]="condition">
+      <p class="code unless">
+        (A) &lt;ng-template [appUnless]="condition"&gt;
+      </p>
+    </ng-template>
+
+    <app-hero-async-message></app-hero-async-message>
   </div>
   <div class="flex-20">
     <app-ad-banner [ads]="ads"></app-ad-banner>
@@ -34,6 +69,8 @@
     </div>
     <p [appHighlight]="color">Highlight me!</p>
     <p [appHighlight]="color" defaultColor="violet">Another highlight</p>
+
+    <app-profile-editor></app-profile-editor>
   </div>
 </div>
 
