--- a/src/styles.css
+++ b/src/styles.css
@@ -34,4 +34,27 @@ button:disabled {
 
 .ad-banner-example {
   width: 400px;
+  height: 230px;
+}
+.unless {
+  border: 2px solid;
+  padding: 6px;
+}
+
+p.unless {
+  width: 500px;
+}
+
+button.a, span.a, .unless.a {
+  color: red;
+  border-color: gold;
+  background-color: yellow;
+  font-size: 100%;
+}
+
+button.b, span.b, .unless.b {
+  color: black;
+  border-color: green;
+  background-color: lightgreen;
+  font-size: 100%;
 }
