--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,10 @@
   <div class="flex-40">
     <app-hero-form-template></app-hero-form-template>
     <app-hero-form-reactive></app-hero-form-reactive>
+    <div>
+      <h2>Job Application for Hero</h2>
+      <app-dynamic-form [questions]="questions"></app-dynamic-form>
+    </div>
   </div>
   <div class="flex-20">
     <app-ad-banner [ads]="ads"></app-ad-banner>
